Fix focus-within dropdown menu z-index issue
  - when dropdown menu is selected then make it z-index 0
  - that's solve the problem

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -120,6 +120,11 @@ a {
     transform: scale(1);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   }
+
+  .navItem:focus-within > .dropdownMenu {
+    z-index: 0;
+  }
+
   .navItem:hover svg,
   .navItem:focus-within svg {
     transform: rotateZ(180deg);
